# WIRELESS-LOCATION-USING-WIFI

./: .gitignore  CMakeLists.txt  README.md
data/: EBlock_1F_ENE131.txt  EBlock_3F_ENE329.txt  GBlock_1F_DeanOffice.txt  GBlock_1F_Washroom.txt  GBlock_2F_ENC201.txt
include/: PostProcessing.h  ScanParser.h
processedFiles/: EBlock_1F_ENE131.csv  EBlock_3F_ENE329.csv  GBlock_1F_DeanOffice.csv  GBlock_1F_Washroom.csv  GBlock_2F_ENC201.csv
src/: PostProcessing.cpp  ScanParser.cpp  main.cpp
